zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__borderless_pane_content_fills_edges.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ──────────────────────────────────────────────────────────────────────────────────────────────── ace-aardvark ┐
01 (C): │                                                                                                                       │
02 (C): │                                                                                                                       │
03 (C): │                                                                                                                       │
04 (C): │                                                                                                                       │
05 (C): │         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX                                                                                │
06 (C): │         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX                                                                                │
07 (C): │         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX                                                                                │
08 (C): │         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX                                                                                │
09 (C): │         XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX                                                                                │
10 (C): │                                                                                                                       │
11 (C): │                                                                                                                       │
12 (C): │                                                                                                                       │
13 (C): │                                                                                                                       │
14 (C): │                                                                                                                       │
15 (C): │                                                                                                                       │
16 (C): │                                                                                                                       │
17 (C): │                                                                                                                       │
18 (C): │                                                                                                                       │
19 (C): └───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
