zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__can_increase_size_into_pane_stack_horizontally.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: snapshot
---
00 (C): ┌ Pane #1 ────────────────────────────────────────────── able-ant ┐┌ Pane #2 ─────────────────────────────── active-ant ┐
01 (C): │                                                                 │┌ Pane #3 ──────────────────────────────── alert-ant ┐
02 (C): │                                                                 │┌ Pane #4 ──────────────────────────────── alive-ant ┐
03 (C): │                                                                 │┌ Pane #5 ─────────────────────────────── amused-ant ┐
04 (C): │                                                                 │┌ Pane #6 ──────────────────────────────── ample-ant ┐
05 (C): │                                                                 ││                                                    │
06 (C): │                                                                 ││                                                    │
07 (C): │                                                                 ││                                                    │
08 (C): │                                                                 ││                                                    │
09 (C): │                                                                 ││                                                    │
10 (C): │                                                                 ││                                                    │
11 (C): │                                                                 ││                                                    │
12 (C): │                                                                 ││                                                    │
13 (C): │                                                                 ││                                                    │
14 (C): │                                                                 ││                                                    │
15 (C): │                                                                 ││                                                    │
16 (C): │                                                                 ││                                                    │
17 (C): │                                                                 ││                                                    │
18 (C): │                                                                 ││                                                    │
19 (C): └─────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────────────┘
